tests/rosetta/out/Dart/carmichael-3-strong-pseudoprimes.error
run error: exit status 254
../../tests/rosetta/out/Dart/carmichael-3-strong-pseudoprimes.dart:61:9: Error: String starting with ' must end with '.
  print('The following are Carmichael munbers for p1 <= 61:
        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
../../tests/rosetta/out/Dart/carmichael-3-strong-pseudoprimes.dart:62:1: Error: String starting with ' must end with '.
');
^^^
../../tests/rosetta/out/Dart/carmichael-3-strong-pseudoprimes.dart:61:8: Error: Can't find ')' to match '('.
  print('The following are Carmichael munbers for p1 <= 61:
       ^
../../tests/rosetta/out/Dart/carmichael-3-strong-pseudoprimes.dart:21:20: Error: A value of type 'num' can't be assigned to a variable of type 'int'.
    d = (d as num) + 2;
                   ^
../../tests/rosetta/out/Dart/carmichael-3-strong-pseudoprimes.dart:25:20: Error: A value of type 'num' can't be assigned to a variable of type 'int'.
    d = (d as num) + 4;
                   ^
../../tests/rosetta/out/Dart/carmichael-3-strong-pseudoprimes.dart:43:22: Error: The argument type 'double' can't be assigned to the parameter type 'int'.
        if (!isPrime(p2)) {
                     ^
../../tests/rosetta/out/Dart/carmichael-3-strong-pseudoprimes.dart:47:22: Error: The argument type 'num' can't be assigned to the parameter type 'int'.
        if (!isPrime(p3)) {
                     ^
../../tests/rosetta/out/Dart/carmichael-3-strong-pseudoprimes.dart:54:40: Error: The argument type 'double' can't be assigned to the parameter type 'int'.
        print(pad(p1, 2) + '   ' + pad(p2, 4) + '   ' + pad(p3, 5) + '     ' + c.toString());
                                       ^
../../tests/rosetta/out/Dart/carmichael-3-strong-pseudoprimes.dart:54:61: Error: The argument type 'num' can't be assigned to the parameter type 'int'.
        print(pad(p1, 2) + '   ' + pad(p2, 4) + '   ' + pad(p3, 5) + '     ' + c.toString());
                                                            ^
../../tests/rosetta/out/Dart/carmichael-3-strong-pseudoprimes.dart:63:3: Error: Expected ',' before this.
  print('p1     p2      p3     product');
  ^^^^^
../../tests/rosetta/out/Dart/carmichael-3-strong-pseudoprimes.dart:61:8: Error: Too many positional arguments: 1 allowed, but 2 found.
Try removing the extra positional arguments.
  print('The following are Carmichael munbers for p1 <= 61:
       ^
org-dartlang-sdk:///sdk/lib/core/print.dart:19:6: Context: Found this candidate, but the arguments don't match.
void print(Object? object) {
     ^^^^^
../../tests/rosetta/out/Dart/carmichael-3-strong-pseudoprimes.dart:93:11: Error: Method not found: 'jsonEncode'.
    print(jsonEncode(v));
          ^^^^^^^^^^
../../tests/rosetta/out/Dart/carmichael-3-strong-pseudoprimes.dart:122:5: Error: Undefined name 'stdout'.
    stdout.write('   test $name ...');
    ^^^^^^
../../tests/rosetta/out/Dart/carmichael-3-strong-pseudoprimes.dart:127:9: Error: Undefined name 'stdout'.
        stdout.writeln(' ok (${_formatDuration(d)})');
        ^^^^^^
../../tests/rosetta/out/Dart/carmichael-3-strong-pseudoprimes.dart:131:9: Error: Undefined name 'stdout'.
        stdout.writeln(' fail $e (${_formatDuration(d)})');
        ^^^^^^
